Quick fix of whitespace on blog index

--- a/personal_website/app/assets/stylesheets/index.scss
+++ b/personal_website/app/assets/stylesheets/index.scss
@@ -13,7 +13,7 @@ body {
     max-width: 980px;
     margin: 0px auto 0px auto;
     position: relative;
-    background-color: #fff;
+    background-color: #e6e6e6;
   }
 
   h1 {
@@ -110,6 +110,7 @@ nav {
 .clear-fix{
   clear:both;
   line-height: 1px;
+
 }
 
 
